[gd_scene load_steps=5 format=3 uid="uid://dmaj8kvbp8qc8"]

[ext_resource type="Texture2D" uid="uid://ck5o4pmwoywo8" path="res://img/porte ac glad.png" id="1_i6gyr"]
[ext_resource type="Script" path="res://porte_arene.gd" id="1_xfaj5"]
[ext_resource type="Texture2D" uid="uid://bgp7023k0tpsj" path="res://img/bouton flèche droite.png" id="2_5bllo"]
[ext_resource type="Texture2D" uid="uid://co453qel170io" path="res://img/img_salle_coffres/boutons/écusson.png" id="4_csbn6"]

[node name="porte_arene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xfaj5")

[node name="porte_arene_background" type="Sprite2D" parent="."]
position = Vector2(578, 326)
texture = ExtResource("1_i6gyr")

[node name="fleche_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 976.0
offset_top = 218.0
offset_right = 2064.0
offset_bottom = 1306.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_5bllo")

[node name="porte_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 246.0
offset_right = 986.0
offset_bottom = 746.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_csbn6")

[connection signal="pressed" from="fleche_button" to="." method="_on_fleche_button_pressed"]
[connection signal="pressed" from="porte_button" to="." method="_on_porte_button_pressed"]
